class Filme:
    
    def __init__(self, titulo, duracao, categoria, classificacao):
        self.titulo = titulo
        self.duracao = duracao 
        self.categoria = categoria 
        self.classificacao = classificacao


f = Filme('Vingadores', 120, 'Ação e aventura', '12 anos')