@startuml Cinema

class Cinema {
    
    -nome: String
    -salas: int 
    -cliente: String
    +construtor(salas)
    +registrar_cliente(cliente)
}

class Salas {

    -filme: Filme
    -num_sala: Int 
    -poltronas: Int 
    +construtor(num_sala, poltrona)
    +exibir_filme(filme)
}

class Filme {

    -titulo: String
    -duracao: Int 
    -categoria: String 
    -classificacao: String 
    +construtor(titulo, duracao, categoria, classificacao)

}

class Ingresso {

    -num_ingresso: Int 
    -num_sala: Int
    -titulo_filme: String
    -preco: Float
    -poltrona: Int
    +construtor(num_ingresso, poltrona, num_sala, titulo_filme, preco)
    +comprar_ingresso(num_ingresso, poltrona, num_sala, titulo_filme, preco)
}

class Pessoa {

    -nome: String 
    -data_nascimento: Date
    -endereco: String  
    +construtor(nome, data_nascimento, endereco)
}

class Pessoa_Fisisca {

    -cpf: Int
    +construtor(cpf)
}

class Pessoa_Juridica {
    
    -cnpj: Int 
    +construtor(cnpj)
}


Cinema <-- Salas
Cinema <-- Ingresso 
Salas -- Filme   
Cinema -- Pessoa 
Pessoa <|-- Pessoa_Fisisca
Pessoa <|-- Pessoa_Juridica
Pessoa -- Ingresso
Salas -- Ingresso


@enduml 